# advection-equation-1d

./: .gitignore  CMakeLists.txt  README.md  plot.ipynb  run_all.ps1  run_all.sh
include/cfd/: cfd.hpp  periodic_boundary.hpp  problem_parameters.hpp  riemann_solvers.hpp  scalar_advection_equation_simulator.hpp  slope_limiters.hpp  spacial_reconstruction_schemes.hpp  text_file_writer.hpp  time_integration_schemes.hpp
src/: beam_warming.cpp  common.cpp  common.hpp  first_order_upwind.cpp  fromm.cpp  lax_wendroff.cpp  scalar_advection_equation_simulator.hpp  text_file_writer.cpp  text_file_writer.hpp  tvd_minmod.cpp  tvd_superbee.cpp  tvd_van_albada.cpp  tvd_van_leer.cpp
test/: cfd_tests.cpp
